--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ params:
 ===========
 
 <div class="subheader">
-Display simple diagnostic info of your Shiny app corner.
+Display simple diagnostic info of your Shiny app in any of its corners.
 </div>
 
 <div class="section level2">
