--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,8 @@ params:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "inst/assets/README_files"
+  fig.path = "inst/assets/README_files",
+  out.width = "100%"
 )
 suppressWarnings(library(shiny.info))
 ```
@@ -20,12 +21,11 @@ suppressWarnings(library(shiny.info))
 <link href="http://fonts.googleapis.com/css?family=Maven+Pro:400,700|Inconsolata" rel="stylesheet" type="text/css">
 <link href='docs/style.css' rel='stylesheet' type='text/css'>
 
-`r params$repo_name`
+# shiny.info <a href='https://github.com/Appsilon/shiny.info'><img src='inst/assets/README_files/logo.png' align="right" height="139" /></a>
 ===========
 
 <div class="subheader">
-Display simple diagnostic info of your Shiny app in any of its corners.
-</div>
+Display simple information of the 'shiny' project in the user interface of the app.
 
 </br>
 
