--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ shiny.info <a href='https://github.com/Appsilon/shiny.info'><img src='inst/asset
 ===========
 
 <div class="subheader">
-Display simple information of the 'shiny' project in the user interface of the app.
+Display simple information of the [shiny](https://shiny.rstudio.com/) project in the user interface of the app.
 </div>
 
 </br>
