--- a/README.Rmd
+++ b/README.Rmd
@@ -61,7 +61,7 @@ Just add one of the `shiny.info` functions to the UI of your app (some features 
 
 An example of shiny app that uses `shiny.info` can be found in `./examples` directory.
 
-![](inst/assets/README_files/example.png)
+![](inst/assets/README_files/example.gif)
 
 Basic features
 -------
@@ -70,10 +70,12 @@ Basic features
   ```
   shiny.info::display("Hello user!", position = "top right")
   ```
+  ![](inst/assets/README_files/display.png)
 * git information:
   ```
   shiny.info::git_info()
   ```
+  ![](inst/assets/README_files/git.png)
 * "powered by" information with link:
   ```
   shiny.info::powered_by("Appsilon", link = "appsilon.com")
