--- a/README.Rmd
+++ b/README.Rmd
@@ -80,18 +80,21 @@ Basic features
   ```
   shiny.info::powered_by("Appsilon", link = "appsilon.com")
   ```
+  ![](inst/assets/README_files/powered.png)
 * version:
   ```
   # global variable:
-  VERSION <- "1.2.1"
+  VERSION <- "1.2.2"
 
   # in app ui
   shiny.info::version()
   ```
+  ![](inst/assets/README_files/version.png)
 * busy spinner
   ```
   shiny.info::busy()
   ```
+  ![](inst/assets/README_files/busy.gif)
 * group multiple messages in one panel
   ```
   shiny.info::info_panel(
@@ -100,6 +103,7 @@ Basic features
       position = "bottom left"
     )
   ```
+  ![](inst/assets/README_files/panel.png)
 
 Advanced features
 -------
