info value and session

--- a/README.Rmd
+++ b/README.Rmd
@@ -117,6 +117,7 @@ Advanced features
   some_value <- reactiveVal("a test value to display")
   output$test_info_value <- shiny.info::render_info_value(some_value())
   ```
+  ![](inst/assets/README_files/info_value.png)
 * render informations about the session
   ```
   # in app ui
@@ -125,6 +126,7 @@ Advanced features
   # in app server
   output$session_info_value <- shiny.info::render_session_info()
   ```
+  ![](inst/assets/README_files/session.png)
 * debug app using `browser()` function just by clicking a button
   ```
   # in app ui
