--- a/README.Rmd
+++ b/README.Rmd
@@ -135,10 +135,12 @@ Advanced features
   # in app server
   shiny.info::inspect_btn_server(input)
   ```
+  ![](inst/assets/README_files/inspect_button.png)
 * toggle display with a key shortcut
   ```
   shiny.info::toggle_info("Ctrl+Shift+K")
   ```
+  ![](inst/assets/README_files/shortcut.gif)
 
 How to contribute?
 -----------------
